[workspace]
members = [
	"helper",
	"2015/day-07",
	"2020/aoc01",
	"2020/aoc02",
	"2020/aoc03",
	"2020/aoc04",
	"2020/aoc05",
	"2020/aoc06",
	"2020/aoc07",
	"2020/aoc08",
	"2020/aoc09",
	"2020/aoc10",
	"2020/aoc11",
	"2020/aoc12",
	"2020/aoc13",
	"2020/aoc14",
	"2020/aoc15",
	"2020/aoc16",
	"2020/aoc17",
]
