[workspace]
members = [
	"aoc",
	"commons",

	"2015/day-01",
	"2015/day-02",
	"2015/day-07",
	"2015/day-10",
	"2015/day-17",

	"2019/day-01",
	"2019/day-02",

	"2020/day-01",
	"2020/day-02",
	"2020/day-03",
	"2020/day-04",
	"2020/day-05",
	"2020/day-06",
	"2020/day-07",
	"2020/day-08",
	"2020/day-09",
	"2020/day-10",
	"2020/day-11",
	"2020/day-12",
	"2020/day-13",
	"2020/day-14",
	"2020/day-15",
	"2020/day-16",
	"2020/day-17",
	"2020/day-18",
	"2020/day-19",
	"2020/day-20",
	"2020/day-21",
	"2020/day-22",
	"2020/day-23",
	"2020/day-24",
	"2020/day-25",

	"2021/day-01",
	"2021/day-02",
	"2021/day-03",
	"2021/day-04",
	"2021/day-05",
	"2021/day-06",
	"2021/day-07",
	"2021/day-08",
	"2021/day-09",
	"2021/day-10",
	"2021/day-11",
	"2021/day-12",
	"2021/day-13",
	"2021/day-14",
	"2021/day-15",
	"2021/day-16",
	"2021/day-17",
	"2021/day-18",
	"2021/day-19",
	"2021/day-20",
	"2021/day-21",
	"2021/day-22",
	"2021/day-23",
	"2021/day-24",
	"2021/day-25",
]
