[package]
name = "commons"
version = "0.1.0"
authors = ["Jezza <jezzadabomb@gmail.com>"]
edition = "2021"

[dependencies]
logos = { version = "0.12.1", optional = true }
itertools = { version = "0.10", optional = true }
num-integer = { version = "0.1", optional = true }
pathfinding = { version = "3.0", optional = true }